fixed ANR crash w/ AdPrompts on really slow devices added the ability to pre-load ad prompts

--- a/src/example/res/layout/main.xml
+++ b/src/example/res/layout/main.xml
@@ -9,27 +9,33 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-	    <TextView
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:text="@string/tapitButtons" />
-		<Button 
-		    android:id="@+id/loadInterstitialButton"
-		    android:text="Load Interstitial"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content" />	        
-		<Button 
-		    android:id="@+id/showInterstitialButton"
-		    android:text="Show Interstitial"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content" />	        
-	    <Button
-	        android:id="@+id/showAlertAdButton"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Show Alert Ad" />
+        <TextView
+            android:id="@+id/tapitText"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tapitButtons" />
+        <Button
+            android:id="@+id/loadInterstitialButton"
+            android:text="Load Interstitial"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/showInterstitialButton"
+            android:text="Show Interstitial"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/loadAlertAdButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Load Alert Ad" />
+        <Button
+            android:id="@+id/showAlertAdButton"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Show Alert Ad" />
     </LinearLayout>
-    
+
     <LinearLayout
         android:id="@+id/googLayout"
         android:layout_below="@+id/mainLayout"
@@ -51,13 +57,13 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />         
     </LinearLayout>
-    
-	<com.tapit.adview.AdView 
-        android:id="@+id/bannerAd"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		zone="7979" />
 
-    
+    <com.tapit.adview.AdView
+        android:id="@+id/bannerAd"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        zone="7979" />
+
+
 </RelativeLayout>
