code cleanup depricated Hashtable useage in favor of Maps

--- a/src/example/res/layout/main.xml
+++ b/src/example/res/layout/main.xml
@@ -64,6 +64,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         zone="7979" />
-
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/bannerContainer"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true" />-->
 
 </RelativeLayout>
